# ml-onboard

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  requirements.in  requirements.txt
iot-node/acquisition/: cross-file.txt  meson.build
iot-node/acquisition/include/: FreeRTOSConfig.h  activity.h  button.h  font.h  i2cll.h  lsm6dsl.h  main.h  matrix.h  morse.h  nn.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
iot-node/acquisition/src/: activity.c  button.c  font.c  i2cll.c  lsm6dsl.c  main.c  matrix.c  morse.c  nn.cc  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
models/: paf.c  paf.h
models/cnn/saved/: keras_metadata.pb  saved_model.pb
models/cnn/saved/variables/: variables.data-00000-of-00001  variables.index
models/cnn/saved2/: keras_metadata.pb  saved_model.pb
models/cnn/saved2/variables/: variables.data-00000-of-00001  variables.index
models/cnn/saved3/: keras_metadata.pb  saved_model.pb
models/cnn/saved3/variables/: variables.data-00000-of-00001  variables.index
notebooks/: Data_cleanup.ipynb  WISDM.ipynb  freq_analysis_walking.ipynb  model_with_all_data.ipynb  test_accelerometer_data.ipynb  to_tflite.ipynb  tutorial.ipynb
src/: helpers.py
